# bbn-json-hs

./: .gitignore  Dockerfile  README.md  bbn-json-hs.cabal  stack.yaml
scripts/: docker-build.sh
src/: Client.hs  Lib.hs  Types.hs
