name:                bbn-json-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bouzuya/bbn-json-hs#readme
license:             BSD3
license-file:        LICENSE
author:              bouzuya
maintainer:          m@bouzuya.net
copyright:           2017 bouzuya
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Client
                     , Types
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , conduit
                     , conduit-extra
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , lifted-base
                     , resourcet
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable bbn-json-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bbn-json-hs
  default-language:    Haskell2010

test-suite bbn-json-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bbn-json-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bouzuya/bbn-json-hs
